# monogon

./: .bazelproject  .bazelrc  .bazelrc.sandboxroot  .gitreview  BUILD.bazel  MODULE.bazel  README.md  SETUP.md  go.mod  go.sum  shell.nix
.github/workflows/: todo.yml
cloud/agent/: BUILD.bazel  agent.go  install.go
cloud/agent/e2e/: BUILD.bazel  main_test.go
cloud/agent/takeover/: BUILD.bazel
cloud/agent/takeover/e2e/: BUILD.bazel  main_test.go
go/qcow2/: BUILD.bazel  qcow2_test.go
metropolis/cli/metroctl/: BUILD.bazel  cmd_install.go  cmd_install_ssh.go  cmd_install_usb.go  cmd_node_metrics.go  rpc.go
metropolis/cli/metroctl/core/: BUILD.bazel  config.go  install.go  rpc.go
metropolis/cli/metroctl/test/: BUILD.bazel  main_test.go
metropolis/cli/takeover/: BUILD.bazel  install.go  takeover.go
metropolis/cli/takeover/e2e/: BUILD.bazel  main_test.go
metropolis/installer/: BUILD.bazel  main.go
metropolis/installer/install/: BUILD.bazel  install.go
metropolis/installer/test/: BUILD.bazel  run_test.go
metropolis/node/: BUILD.bazel  net_protocols.go  net_status.go
metropolis/node/abloader/: BUILD.bazel  main.rs
metropolis/node/allocs/: BUILD.bazel  doc.go  ids.go  net_ips.go  net_protocols.go  ports.go
metropolis/node/bios_bootcode/: BUILD.bazel
metropolis/node/core/: BUILD.bazel  debug_service_enabled.go  delve_enabled.go  main.go
metropolis/node/core/clusternet/: BUILD.bazel  clusternet.go  clusternet_test.go
metropolis/node/core/consensus/: BUILD.bazel  configuration.go  consensus.go  status.go
metropolis/node/core/consensus/client/: unimplemented.go
metropolis/node/core/curator/: BUILD.bazel  curator_test.go  filters.go  impl_follower.go  impl_leader_curator.go  impl_leader_test.go  listener.go
metropolis/node/core/devmgr/: devmgr.go
metropolis/node/core/localstorage/: directory_root.go  storage.go
metropolis/node/core/metrics/: BUILD.bazel  exporters.go  metrics.go  metrics_test.go
metropolis/node/core/mgmt/: BUILD.bazel  mgmt.go
metropolis/node/core/network/: BUILD.bazel  main.go  neigh.go  static.go
metropolis/node/core/network/hostsfile/: BUILD.bazel  hostsfile.go
metropolis/node/core/network/ipam/: BUILD.bazel  ipam.go
metropolis/node/core/network/overlay/: BUILD.bazel  overlay.go  overlay_test.go  wireguard.go
metropolis/node/core/network/workloads/: BUILD.bazel  workloads.go
metropolis/node/core/network/workloads/spec/: BUILD.bazel  workload.proto
metropolis/node/core/roleserve/: BUILD.bazel  roleserve.go  worker_clusternet.go  worker_kubernetes.go  worker_statuspush.go  worker_statuspush_test.go
metropolis/node/core/rpc/resolver/: BUILD.bazel  resolver.go
metropolis/node/core/tconsole/: BUILD.bazel  page_logs.go  page_status.go  tconsole.go
metropolis/node/core/tconsole/standalone/: BUILD.bazel  main.go
metropolis/node/core/time/: BUILD.bazel  time.go
metropolis/node/core/update/: BUILD.bazel  update.go
metropolis/node/core/update/e2e/: BUILD.bazel  e2e_test.go
metropolis/node/core/update/e2e/testos/: main.go  testos.bzl
metropolis/node/kubernetes/: BUILD.bazel  apiproxy.go  apiserver.go  csi.go  feature_gates.go  provisioner.go  service_controller.go  service_worker.go
metropolis/node/kubernetes/authproxy/: BUILD.bazel  authproxy.go
metropolis/node/kubernetes/clusternet/: BUILD.bazel  clusternet.go
metropolis/node/kubernetes/containerd/: config.toml
metropolis/node/kubernetes/containerd/cniproxy/: BUILD.bazel  cniproxy.go  cnitypes.go  opts.go
metropolis/node/kubernetes/hyperkube/: main.go
metropolis/node/kubernetes/metricsproxy/: BUILD.bazel  metricsproxy.go
metropolis/node/kubernetes/networkpolicy/: BUILD.bazel  networkpolicy.go
metropolis/node/kubernetes/pause/: BUILD.bazel
metropolis/node/kubernetes/pki/: BUILD.bazel  kubernetes.go
metropolis/node/kubernetes/plugins/kvmdevice/: kvmdevice.go
metropolis/node/kubernetes/reconciler/: BUILD.bazel  reconciler_status_test.go
metropolis/node/tools/: tools.go
metropolis/test/e2e/connectivity/agent/: BUILD.bazel
metropolis/test/e2e/httpserver/: BUILD.bazel
metropolis/test/e2e/persistentvolume/: BUILD.bazel  main.go
metropolis/test/e2e/preseedtest/: BUILD.bazel
metropolis/test/e2e/selftest/: BUILD.bazel
metropolis/test/e2e/suites/core/: BUILD.bazel  run_test.go
metropolis/test/e2e/suites/kubernetes/: BUILD.bazel  kubernetes_helpers.go  run_test.go
metropolis/test/launch/: BUILD.bazel  cluster.go  launch.go
metropolis/test/launch/cli/launch-cluster/: BUILD.bazel  main.go
metropolis/test/localregistry/: localregistry.go
metropolis/test/nanoswitch/: BUILD.bazel  nanoswitch.go  socks.go
osbase/bootparam/: BUILD.bazel  params_test.go
osbase/bringup/: bringup.go
osbase/bringup/test/: BUILD.bazel  run_test.go
osbase/event/etcd/: BUILD.bazel  etcd_test.go
osbase/kexec/: kexec.go
osbase/kmod/: meta.go  modinfo.go
osbase/logtree/: BUILD.bazel  journal.go  journal_entry.go  journal_test.go  klog.go  kmsg.go  kmsg_test.go  logtree_access.go  logtree_access_test.go  logtree_entry.go
osbase/net/dhcp4c/: BUILD.bazel  dhcpc.go  dhcpc_test.go
osbase/net/dhcp4c/callback/: BUILD.bazel  callback.go  callback_test.go
osbase/net/dhcp4c/transport/: BUILD.bazel
osbase/net/dns/kubernetes/object/: informer.go
osbase/oci/: layout.go  oci.go  oci_test.go
osbase/oci/osimage/: osimage.go  osimage_test.go  types.go
osbase/oci/registry/: client.go  client_test.go  server.go
osbase/pki/: BUILD.bazel  certificate_test.go  crl_test.go
osbase/test/cmd/: BUILD.bazel
osbase/test/freeport/: BUILD.bazel
osbase/test/ktest/: BUILD.bazel  ktest.bzl
osbase/test/qemu/: BUILD.bazel  launch.go
osbase/test/socksproxy/: BUILD.bazel
osbase/verity/: encoder.go  encoder_test.go
tools/: bazel  gopackagesdriver
