load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = ["main_test.go"],
    data = [
        "//build/toolchain/toolchain-bundle:qemu-kvm",
        "//cloud/agent/takeover:initramfs",
        "//metropolis/installer/test/testos:testos_image",
        "//third_party/edk2:CODE.fd",
        "//third_party/edk2:VARS.fd",
        "//third_party/linux",
    ],
    x_defs = {
        "xImagePath": "$(rlocationpath //metropolis/installer/test/testos:testos_image )",
        "xOvmfVarsPath": "$(rlocationpath //third_party/edk2:VARS.fd )",
        "xOvmfCodePath": "$(rlocationpath //third_party/edk2:CODE.fd )",
        "xKernelPath": "$(rlocationpath //third_party/linux )",
        "xInitramfsOrigPath": "$(rlocationpath //cloud/agent/takeover:initramfs )",
        "xQEMUPath": "$(rlocationpath //build/toolchain/toolchain-bundle:qemu-kvm )",
    },
    deps = [
        "//cloud/agent/api",
        "//metropolis/proto/api",
        "//osbase/oci",
        "//osbase/oci/registry",
        "//osbase/pki",
        "@com_github_cavaliergopher_cpio//:cpio",
        "@com_github_klauspost_compress//zstd",
        "@io_bazel_rules_go//go/runfiles",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sys//unix",
    ],
)
