load("//metropolis/node/bios_bootcode/genlogo:def.bzl", "gen_logo")

gen_logo(
    name = "logo.asm",
    logo = ":logo.png",
)

genrule(
    name = "bios_bootcode",
    srcs = [
        ":boot.asm",
        ":logo.asm",
    ],
    outs = ["boot.bin"],
    cmd = "$(NASM) -d LOGO=$(location :logo.asm) $(location :boot.asm) -f bin -o $@",
    toolchains = [
        "//build/toolchain/toolchain-bundle:nasm",
    ],
    visibility = ["//visibility:public"],
)
