load("@io_bazel_rules_go//go:def.bzl", "go_test")
load(":bringup.bzl", "bringup_test")

bringup_test(variant = "succeeded")

bringup_test(variant = "error")

bringup_test(variant = "panic")

go_test(
    name = "test_test",
    size = "medium",
    srcs = ["run_test.go"],
    data = [
        ":kernel_error",
        ":kernel_panic",
        ":kernel_succeeded",
        "//build/toolchain/toolchain-bundle:qemu-kvm",
        "//third_party/edk2:CODE.fd",
        "//third_party/edk2:VARS.fd",
    ],
    importpath = "source.monogon.dev/metropolis/installer/test",
    visibility = ["//visibility:private"],
    x_defs = {
        "xOvmfVarsPath": "$(rlocationpath //third_party/edk2:VARS.fd )",
        "xOvmfCodePath": "$(rlocationpath //third_party/edk2:CODE.fd )",
        "xSucceedKernelPath": "$(rlocationpath :kernel_succeeded )",
        "xPanicKernelPath": "$(rlocationpath :kernel_panic )",
        "xErrorKernelPath": "$(rlocationpath :kernel_error )",
        "xQEMUPath": "$(rlocationpath //build/toolchain/toolchain-bundle:qemu-kvm )",
    },
    deps = [
        "//osbase/cmd",
        "@io_bazel_rules_go//go/runfiles",
    ],
)
