load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dhcp4c",
    srcs = [
        "dhcpc.go",
        "doc.go",
        "lease.go",
    ],
    importpath = "source.monogon.dev/osbase/net/dhcp4c",
    visibility = ["//visibility:public"],
    deps = [
        "//osbase/net/dhcp4c/transport",
        "//osbase/supervisor",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_insomniacslk_dhcp//dhcpv4",
        "@com_github_insomniacslk_dhcp//iana",
    ],
)

go_test(
    name = "dhcp4c_test",
    srcs = [
        "dhcpc_test.go",
        "lease_test.go",
    ],
    embed = [":dhcp4c"],
    deps = [
        "//osbase/net/dhcp4c/transport",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_insomniacslk_dhcp//dhcpv4",
        "@com_github_stretchr_testify//assert",
    ],
)
