load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = ["main_test.go"],
    data = [
        # We use the layer instead of the binary to not add a transition target
        "//cloud/agent/takeover",
        "//third_party/edk2:CODE.fd",
        "//third_party/edk2:VARS.fd",
        "@debian_11_cloudimage//file",
        "//build/toolchain/toolchain-bundle:qemu-kvm",
    ],
    x_defs = {
        "xCloudImagePath": "$(rlocationpath @debian_11_cloudimage//file )",
        "xOvmfVarsPath": "$(rlocationpath //third_party/edk2:VARS.fd )",
        "xOvmfCodePath": "$(rlocationpath //third_party/edk2:CODE.fd )",
        "xTakeoverPath": "$(rlocationpath //cloud/agent/takeover )",
        "xQEMUPath": "$(rlocationpath //build/toolchain/toolchain-bundle:qemu-kvm )",
    },
    deps = [
        "//cloud/agent/api",
        "//osbase/fat32",
        "//osbase/freeport",
        "//osbase/structfs",
        "@com_github_pkg_sftp//:sftp",
        "@io_bazel_rules_go//go/runfiles",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_crypto//ssh",
    ],
)
