load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = ["main_test.go"],
    data = [
        "//build/toolchain/toolchain-bundle:qemu-kvm",
        "//metropolis/cli/metroctl:metroctl_lite",
        "//metropolis/cli/takeover",
        "//metropolis/installer/test/testos:testos_image",
        "//third_party/edk2:CODE.fd",
        "//third_party/edk2:VARS.fd",
        "@debian_11_cloudimage//file",
    ],
    x_defs = {
        "xImagePath": "$(rlocationpath //metropolis/installer/test/testos:testos_image )",
        "xOvmfVarsPath": "$(rlocationpath //third_party/edk2:VARS.fd )",
        "xOvmfCodePath": "$(rlocationpath //third_party/edk2:CODE.fd )",
        "xCloudImagePath": "$(rlocationpath @debian_11_cloudimage//file )",
        "xTakeoverPath": "$(rlocationpath //metropolis/cli/takeover )",
        "xMetroctlPath": "$(rlocationpath //metropolis/cli/metroctl:metroctl_lite )",
        "xQEMUPath": "$(rlocationpath //build/toolchain/toolchain-bundle:qemu-kvm )",
    },
    deps = [
        "//osbase/fat32",
        "//osbase/freeport",
        "//osbase/structfs",
        "@io_bazel_rules_go//go/runfiles",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
        "@org_golang_x_sys//unix",
    ],
)
