load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transport",
    srcs = [
        "transport.go",
        "transport_broadcast.go",
        "transport_unicast.go",
    ],
    importpath = "source.monogon.dev/osbase/net/dhcp4c/transport",
    visibility = ["//osbase/net/dhcp4c:__subpackages__"],
    deps = [
        "@com_github_google_gopacket//:gopacket",
        "@com_github_google_gopacket//layers",
        "@com_github_insomniacslk_dhcp//dhcpv4",
        "@com_github_mdlayher_packet//:packet",
        "@org_golang_x_net//bpf",
        "@org_golang_x_sys//unix",
    ],
)
