load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cniproxy",
    srcs = [
        "cniproxy.go",
        "cnitypes.go",
        "opts.go",
    ],
    importpath = "source.monogon.dev/metropolis/node/kubernetes/containerd/cniproxy",
    visibility = ["//visibility:public"],
    deps = [
        "//metropolis/node/core/network/workloads/spec",
        "@com_github_containernetworking_cni//pkg/types",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
